--- a/lizard_ui/static/bootstrap/less/lizard-bootstrap.less
+++ b/lizard_ui/static/bootstrap/less/lizard-bootstrap.less
@@ -75,10 +75,10 @@
 // And to make sure there are no scrollbars when we slide a sidebar out, the
 // page needs to have overflow hidden.
 html,
-body {
+body,
+#page {
   // WARNING: this potentially makes _everything_ invisible in IE7
   overflow: hidden;
-  height: 100%;
 }
 
 // Two variables to help with positioning. They include the 1px border.
@@ -159,7 +159,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: auto;
+  overflow: hidden;
 }
 
 // Every bar is divided into two; the following parts are floated to the left.
